--- a/ExamMaster.css
+++ b/ExamMaster.css
@@ -46,14 +46,17 @@ body {
 /* adding new logo in img format */
 .logoImg{
     height: 100%;
-    width: 200px;
+    width: 20%;
     /* border: 2px solid black; */
+    position: relative;
+    
 }
 
 .logoImg img{
-    /* border: 2px solid red; */
-    height: 170px;
-    width: 250px;
+    /* border: 2px solid red;  */
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
 }
 
 .firstPage{
