--- a/ExamMaster.css
+++ b/ExamMaster.css
@@ -10,7 +10,7 @@
 }
 body {
     font-family: 'Arial', sans-serif;
-    background-color: #FAFAFA; /* Light Theme Background */
+    background-color: rgba(145, 232, 145, 0.064); /* Light Theme Background */
     color: #333; /* Dark Text Color */
     margin: 0;
     padding: 0; 
