--- a/ExamMaster.css
+++ b/ExamMaster.css
@@ -116,8 +116,11 @@ body {
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     border-radius: 10px 
 }
+.col-md-3 {
+    border: 2px solid green;
+}
 .question-panel {
-    height: 100%;
+    height: 100%;  
     overflow-y: auto;
     background-color: #FFFFFF; /* White Panel */
     border-top-left-radius: 10px;
@@ -126,6 +129,7 @@ body {
     padding: 20px;
     border-left: 4px solid #2196F3; /* Blue Border */
     color: #333;
+    border: 2px solid red;
       
 }
 .col-md-3 .mb-3{
