--- a/ExamMaster.css
+++ b/ExamMaster.css
@@ -116,7 +116,12 @@ body {
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     border-radius: 10px 
 }
-.col-md-3 {
+
+.row{
+    border: 2px solid black;
+}
+
+.col-md-3 {                 /*container of question panel*/
     border: 2px solid green;
 }
 .question-panel {
