--- a/ExamMaster.css
+++ b/ExamMaster.css
@@ -118,13 +118,10 @@ body {
 }
 
 .row{
-    border: 2px solid black;
+    /* border: 2px solid black; */
     height: 100%;
 }
 
-.col-md-3 {                 /*container of question panel*/
-    border: 2px solid green;
-}
 .question-panel {
     height: 100%;  
     overflow-y: auto;
@@ -133,9 +130,8 @@ body {
     border-bottom-left-radius: 10px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
     padding: 20px;
-    border-left: 4px solid #2196F3; /* Blue Border */
     color: #333;
-    border: 2px solid red;
+    /* border: 2px solid red; */
       
 }
 .col-md-3 .mb-3{
