--- a/ExamMaster.css
+++ b/ExamMaster.css
@@ -26,8 +26,8 @@ body {
     align-items: center;
     height: 70px;
     /* padding: 15px 30px; */
-    background-color: #FFFFFF;
-    /* background-color: red; */
+    /* background-color: #FFFFFF; */
+    background-color: #F1F1F1;   /*the same color as the footer*/
     color: #333;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     padding-left: 30px;
