--- a/ExamMaster.css
+++ b/ExamMaster.css
@@ -56,7 +56,7 @@ body {
 .logoImg img{
     /* border: 2px solid red;  */
     height: 100%;
-    width: 100%;
+    width: 100%;;
     overflow: hidden;
 }
 
