--- a/ExamMaster.css
+++ b/ExamMaster.css
@@ -17,6 +17,8 @@ body {
     margin: 0;
     padding: 0; 
     /* background-image: url("backgroundImg2.jpg"); */
+    /* background-image: url(wallpaper.jpg); */
+    background-image: url("temporaryWallpa.jpg");
     background-size: 100%;
 }
       
@@ -75,7 +77,8 @@ body {
 }   
 #loginPage{
     /* background-color: white; */
-    background-color: rgba(128, 128, 128, 0.149);
+    /* background-color: rgba(128, 128, 128, 0.149); */
+    background-color: rgb(233, 233, 233);
     border-radius: 10px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     width: 50vw;
