--- a/ExamMaster.css
+++ b/ExamMaster.css
@@ -17,8 +17,8 @@ body {
     margin: 0;
     padding: 0; 
     /* background-image: url("backgroundImg2.jpg"); */
-    /* background-image: url(wallpaper.jpg); */
-    background-image: url("temporaryWallpa.jpg");
+    background-image: url(wallpaper.jpg);
+    /* background-image: url("temporaryWallpa.jpg"); */
     background-size: 100%;
 }
       
